--- a/style.css
+++ b/style.css
@@ -199,6 +199,219 @@
     width: 28%;
 }
 
+.container13 {
+    display: flex;
+    background-color: #06206a;
+    height: 200px;
 
+}
 
+.container13 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
 
+.container13 div:nth-child(2) {
+    align-self: flex-end;
+}
+
+.container14 {
+    display: flex;
+    background-color: #06206a;
+    height: 200px;
+    align-items: flex-start;
+
+}
+
+.container14 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
+
+.container14 div:nth-child(1) {
+    height: 20px;
+}
+
+.container14 div:nth-child(2) {
+    height: 100px;
+}
+
+.container14 div:nth-child(3) {
+    height: 50px;
+}
+
+.container14 div:nth-child(4) {
+    height: 130px;
+}
+
+.container15 {
+    display: flex;
+    background-color: #06206a;
+    height: 200px;
+    align-items: flex-end;
+
+}
+
+.container15 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+    fle
+}
+
+.container15 div:nth-child(1) {
+    height: 20px;
+}
+
+.container15 div:nth-child(2) {
+    height: 100px;
+}
+
+.container15 div:nth-child(3) {
+    height: 50px;
+}
+
+.container15 div:nth-child(4) {
+    height: 130px;
+}
+
+.container16 {
+    display: flex;
+    background-color: #06206a;
+    height: 200px;
+    align-items: flex-center;
+
+}
+
+.container16 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
+
+.container16 div:nth-child(1) {
+    height: 20px;
+}
+
+.container16 div:nth-child(2) {
+    height: 100px;
+}
+
+.container16 div:nth-child(3) {
+    height: 50px;
+}
+
+.container16 div:nth-child(4) {
+    height: 130px;
+}
+
+.container17 {
+    display: flex;
+    background-color: #06206a;
+    height: 200px;
+    align-items: stretch;
+
+}
+
+.container17 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
+
+.container18 {
+    display: flex;
+    background-color: #06206a;
+    height: 800px;
+    flex-wrap: wrap;
+    align-content: flex-start;
+
+}
+
+.container18 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
+
+.container19 {
+    display: flex;
+    background-color: #06206a;
+    height: 800px;
+    flex-wrap: wrap;
+    align-content: flex-end;
+
+}
+
+.container19 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
+
+.container20 {
+    display: flex;
+    background-color: #06206a;
+    height: 800px;
+    flex-wrap: wrap;
+    align-content: flex-center;
+
+}
+
+.container20 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
+
+.container21 {
+    display: flex;
+    background-color: #06206a;
+    height: 800px;
+    flex-wrap: wrap;
+    align-content: space-between;
+
+}
+
+.container21 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
+
+.container22 {
+    display: flex;
+    background-color: #06206a;
+    height: 800px;
+    flex-wrap: wrap;
+    align-content: space-around;
+
+}
+
+.container22 div {
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+    font-size: 35px;
+    height: 50px;
+}
